--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -15,6 +15,15 @@
     <h2>Data Collection and Use</h2>
     <p>This extension does not collect or transmit any personal information or data to any third parties.</p>
 
+    <h2>Permissions and Compliance</h2>
+    <p>To comply with Google’s Program Policies, we have removed the following unused permissions:</p>
+    <ul>
+        <li><strong>Storage</strong>: This permission was used for local storage but is no longer required for the extension’s core functionality.</li>
+        <li><strong>ActiveTab</strong>: This permission allowed interaction with the active browser tab, which is no longer necessary.</li>
+        <li><strong>Scripting</strong>: This permission was previously requested for future features, but these features have not been implemented, so the permission has been removed.</li>
+    </ul>
+    <p>We request only the narrowest permissions necessary to provide the extension’s features in compliance with Google's policies. No unnecessary or future-proofing permissions are requested.</p>
+
     <h2>Changes to this Privacy Policy</h2>
     <p>We may update this Privacy Policy from time to time. Any changes will be reflected in this document.</p>
 
