--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -13,21 +13,23 @@
     <p>The Medipol Discount Calculator Extension does not collect, store, or share any personal data. This extension is designed to work offline and perform calculations based on user input, without transmitting data to external servers.</p>
 
     <h2>Data Collection and Use</h2>
-    <p>This extension does not collect or transmit any personal information or data to any third parties.</p>
+    <p>This extension does not collect or transmit any personal information or data to any third parties. All calculations are performed locally on the user's device, ensuring privacy and data security.</p>
 
-    <h2>Permissions and Compliance</h2>
-    <p>To comply with Google’s Program Policies, we have removed the following unused permissions:</p>
+    <h2>Google Extension Permissions</h2>
+    <p>As part of ensuring user privacy and compliance with Google Chrome Web Store policies, the Medipol Discount Calculator Extension only requests the permissions strictly necessary for its operation. Below is a breakdown of permissions and their usage:</p>
+
     <ul>
-        <li><strong>Storage</strong>: This permission was used for local storage but is no longer required for the extension’s core functionality.</li>
-        <li><strong>ActiveTab</strong>: This permission allowed interaction with the active browser tab, which is no longer necessary.</li>
-        <li><strong>Scripting</strong>: This permission was previously requested for future features, but these features have not been implemented, so the permission has been removed.</li>
+        <li><strong>storage</strong>: Initially requested to store user preferences or data locally, but this permission is no longer required for the extension’s core functionality. We have removed it to minimize access to user data.</li>
+        <li><strong>activeTab</strong>: This permission allowed the extension to interact with the currently active browser tab. However, as it is not needed for current features, it has been removed to limit unnecessary access.</li>
+        <li><strong>scripting</strong>: Previously requested to inject scripts into pages for potential future features, but since these features are not yet implemented, this permission has been removed.</li>
     </ul>
-    <p>We request only the narrowest permissions necessary to provide the extension’s features in compliance with Google's policies. No unnecessary or future-proofing permissions are requested.</p>
+
+    <p>The extension only requests permissions necessary for the immediate functionality of its features, following the principle of least privilege. We do not request permissions for future-proofing or unused functionality, ensuring compliance with Google’s Program Policies.</p>
 
     <h2>Changes to this Privacy Policy</h2>
-    <p>We may update this Privacy Policy from time to time. Any changes will be reflected in this document.</p>
+    <p>We may update this Privacy Policy from time to time, particularly when changes are made to the permissions required by the extension. Any updates will be reflected in this document and within the extension’s listing in the Chrome Web Store.</p>
 
     <h2>Contact Us</h2>
-    <p>If you have any questions or concerns regarding this privacy policy, you can contact us at motaz200057@gmail.com.</p>
+    <p>If you have any questions or concerns regarding this privacy policy or the permissions used by the Medipol Discount Calculator Extension, you can contact us at motaz200057@gmail.com.</p>
 </body>
 </html>
